[build-system]
requires = ["setuptools-scm", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name= "ADnameGen" 
version= "1.0"
readme = "README.md" 
authors = [{name = "Daniel W"}]
license = {text = ["MIT"], file = "" }
dependencies = [
    "argparse"
]

[project.scripts]
cli-name = "UserNameGen.generator:main"